Project/nginx-nodejs-redis/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-nodejs-redis
  labels:
    name: nginx-nodejs-redis
