Project/nginx-nodejs-redis/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-nodejs-redis-ingress
  namespace: nginx-nodejs-redis
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx-nodejs-redis.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
